Providers, PSS, Contact, and IHH
Made layout changes to all of the pages above, added images to contacts, and tried a format for some to go for a more uniform look

--- a/contact.html
+++ b/contact.html
@@ -16,76 +16,106 @@
 </div>
 
 <body>
+	<div class="csh">
+		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
+	</div>
 	<main>
 		<div id="contact">
 			<h2>Our Locations and When You Can Reach Out to Us</h2>
-			<h3>Clarinda</h3>
-			<ul>
-				<li>
-					<h4>Hours: 8am-4pm</h4>
-				</li>
-				<li>
-					<h4>Days: Monday-Friday</h4>
-				</li>
-				<li>
-					<p><strong>Address:</strong> 216 W Division St
-						Clarinda, IA 51632</p>
-				</li>
-				<li>
-					<h4>Phone Numebrs:</h4>
-					<p>Ph. (712) 542-2388</p>
-					<p>F. (712) 542-2984</p>
-				</li>
-			</ul>
-			<h3>Shenandoah</h3>
-			<ul>
-				<li>
-					<h4>Hours: 8am-4pm</h4>
-				</li>
-				<li>
-					<h4>Days: Monday-Friday</h4>
-				</li>
-				<li>
-					<p><strong>Address:</strong> 1213 5th Avenue
-						Shenandoah, IA 51601</p>
-				</li>
-				<li>
-					<h4>Phone Numebrs:</h4>
-					<p>Ph. (712) 581-7900</p>
-					<p>F. (712) 522-1983</p>
-				</li>
-			</ul>
-			<h3>Red Oak</h3>
-			<ul>
-				<li>
-					<h4>Hours: 8am-4pm</h4>
-				</li>
-				<li>
-					<h4>Days: Monday-Saturday</h4>
-				</li>
-				<li>
-					<p><strong>Address:</strong> 1000 N Broadway St.
-						Red Oak, IA 51566</p>
-				</li>
-				<li>
-					<h4>Phone Numebrs:</h4>
-					<p>Ph. (712) 581-7900</p>
-					<p>F. (712) 522-1983</p>
-				</li>
-			</ul>
-			<h3>Support Line</h3>
-			<ul>
-				<li>
-					<h4>Hours: 24 Hours Per Day</h4>
-				</li>
-				<li>
-					<h4>Days: 7 Days Per Week</h4>
-				</li>
-				<li>
-					<h4>Phone Numeber:</h4>
-					<p>Ph. (712) 303-7066</p>
-				</li>
-			</ul>
+			<table>
+				<tr>
+					<td>
+						<h3>Clarinda</h3>
+						<ul>
+							<li>
+								<h4>Hours: 8am-4pm</h4>
+							</li>
+							<li>
+								<h4>Days: Monday-Friday</h4>
+							</li>
+							<li>
+								<p><strong>Address:</strong> 216 W Division St
+									Clarinda, IA 51632</p>
+							</li>
+							<li>
+								<h4>Phone Numbers:</h4>
+								<p>Ph. (712) 542-2388</p>
+								<p>F. (712) 542-2984</p>
+							</li>
+						</ul>
+					</td>
+					<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\ClarindaPing.PNG" alt="Clarinda"></td>
+				</tr>
+			</table>
+			<table>
+				<tr>
+					<td>
+						<h3>Shenandoah</h3>
+						<ul>
+							<li>
+								<h4>Hours: 8am-4pm</h4>
+							</li>
+							<li>
+								<h4>Days: Monday-Friday</h4>
+							</li>
+							<li>
+								<p><strong>Address:</strong> 1213 5th Avenue
+									Shenandoah, IA 51601</p>
+							</li>
+							<li>
+								<h4>Phone Numbers:</h4>
+								<p>Ph. (712) 581-7900</p>
+								<p>F. (712) 522-1983</p>
+							</li>
+						</ul>
+					</td>
+					<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\ShenandoahPing.PNG" alt="Shenandoah"></td>
+				</tr>
+			</table>
+			<table>
+				<tr>
+					<td>
+						<h3>Red Oak</h3>
+						<ul>
+							<li>
+								<h4>Hours: 8am-4pm</h4>
+							</li>
+							<li>
+								<h4>Days: Monday-Saturday</h4>
+							</li>
+							<li>
+								<p><strong>Address:</strong> 1000 N Broadway St.
+									Red Oak, IA 51566</p>
+							</li>
+							<li>
+								<h4>Phone Numbers:</h4>
+								<p>Ph. (712) 581-7900</p>
+								<p>F. (712) 522-1983</p>
+							</li>
+						</ul>
+					</td>
+					<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\RedOakPing.PNG" alt="RedOak"></td>
+				</tr>
+			</table>
+			<table>
+				<tr>
+					<td>
+						<h3>Support Line</h3>
+						<ul>
+							<li>
+								<h4>Hours: 24 Hours Per Day</h4>
+							</li>
+							<li>
+								<h4>Days: 7 Days Per Week</h4>
+							</li>
+							<li>
+								<h4>Phone Number:</h4>
+								<p>Ph. (712) 303-7066</p>
+							</li>
+						</ul>
+					</td>
+				</tr>
+			</table>
 
 			<footer>
 				<hr>
