--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							Clarinda, IA 51632</p>
 					</li>
 					<li>
-						<h4>Phone Numebrs:</h4>
+						<h4>Phone Numbers:</h4>
 						<p>Ph. (712) 542-2388</p>
 						<p>F. (712) 542-2984</p>
 					</li>
@@ -78,7 +78,7 @@
 							Shenandoah, IA 51601</p>
 					</li>
 					<li>
-						<h4>Phone Numebrs:</h4>
+						<h4>Phone Numbers:</h4>
 						<p>Ph. (712) 581-7900</p>
 						<p>F. (712) 522-1983</p>
 					</li>
@@ -100,7 +100,7 @@
 							Red Oak, IA 51566</p>
 					</li>
 					<li>
-						<h4>Phone Numebrs:</h4>
+						<h4>Phone Numbers:</h4>
 						<p>Ph. (712) 581-7900</p>
 						<p>F. (712) 522-1983</p>
 					</li>
