--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
 	<br>
 	<div class="homeimage">
-		<img src="wmhc.jpg" alt="Waubonsie Mental Health Center">
+		<img src="Images\wmhc.jpg" alt="Waubonsie Mental Health Center">
 	</div>
 
 	<table>
@@ -34,7 +34,7 @@
 				<p><i>The Center does not discriminate in regard to race, color, creed, national origin, sex, religion, age,
 						sexual orientation, physical disability, or mental disability in providing services in any of our programs.</p>
 			</td>
-			<td><img src="Dream big.jpg" alt="Dream Big"></td>
+			<td><img src="Images\Dream big.jpg" alt="Dream Big"></td>
 		</tr>
 	</table>
 
