--- a/mm.html
+++ b/mm.html
@@ -27,7 +27,7 @@
 						<p>Our licensed and highly qualified Medication Management team offers assessments,
 							prescriptions, and ongoing care/monitoring for individuals taking psychiatric medications.  </p>
 
-					<td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\medmgt telehealth.jpg"
+					<td><img src="Images\medmgt telehealth.jpg"
 					alt="insession"></td>
 			</tr>
 	</table>
