--- a/ot.html
+++ b/ot.html
@@ -28,7 +28,7 @@
 							anxiety to trauma- and everything in between. Our licensed staff is trained to work with individuals, couples,
 							and families. Types of therapy offered include Cognitive Behavioral Therapy, EMDR, Play Therapy, and more. </p>
 
-					<td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\DSC01725 (1).jpg"
+					<td><img src="Images\DSC01725 (1).jpg"
 					alt="insession"></td>
 			</tr>
 	</table>
