--- a/scl.html
+++ b/scl.html
@@ -27,7 +27,7 @@
 						<p>Like CSS, Supported Community Living also provides home and community-based support to individuals living with serious, persistent mental illness. Together with their assigned Supported Community Living Worker, clients in this program work to develop coping and life skills needed to participate more fully in their communities.
  </p>
 
-					<td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\Roxy Smith.jpg"
+					<td><img src="Images\Roxy Smith.jpg"
 					alt="insession"></td>
 			</tr>
 	</table>
