--- a/comsupser.html
+++ b/comsupser.html
@@ -27,7 +27,7 @@
 						<p>Community Support Services provides home and community-based support to individuals living with serious, persistent mental illness. Together with their assigned Community Support Specialist, clients in this program work on setting, meeting, and maintaining their wellness goals!
  </p>
 
-					<td><img src="C:\Users\S535331\Desktop\project\client-project-group2morganburright\Client Files\Client Files\Images\beyou.png"
+					<td><img src="Images\beyou.png"
 					alt="beyou"></td>
 			</tr>
 	</table>
