--- a/pss.html
+++ b/pss.html
@@ -29,7 +29,7 @@
 					<p>Peer Support Services offer opportunities for learning and skill building in a peer-driven setting. Our Peer Support Services offer a dynamic mix of groups, activities, and community outings,
 						facilitated by a certified Peer Support Specialist with lived recovery experience.</p>
 
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\hands.jpeg" alt="IHH" width="250"></td>
+				<td><img src="Images\hands.jpeg" alt="IHH" width="250"></td>
 			</tr>
 		</table>
 		<h3>Who's eligible to receive this service? </h3>
