More Image Changes
Made more changes to the pathing of images and some formatting changes

--- a/FAQ.html
+++ b/FAQ.html
@@ -19,8 +19,8 @@
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
+	<h2>Frequently Asked Questions:</h2>
 	<div id="contact">
-		<h2>Frequently Asked Questions:</h2>
 		<h3>How have you adjusted your services to adapt to the COVID-19 pandemic?</h3>
 		<ul>
 			<li>
@@ -29,18 +29,24 @@
 					preference. Individuals exhibiting signs of illness at the time of their appointment will be provided with the option to receive services via telehealth from their homes.</p>
 			</li>
 		</ul>
+	</div>
+	<div id="contact">
 		<h3>How do I set up services?</h3>
 		<ul>
 			<li>
 				<p>Simply call any one of our offices during business hours, and one of our support staff will assist you!</p>
 			</li>
 		</ul>
+	</div>
+	<div id="contact">
 		<h3>Do you accept insurance?</h3>
 		<ul>
 			<li>
 				<p>Yes we do! Waubonsie Mental Health Center currently accepts a wide variety of insurance plans. Please call any one of our offices for more information.</p>
 			</li>
 		</ul>
+	</div>
+	<div id="contact">
 		<h3>I'm unisured or cannot afford my co-pay, am I still eligible for services?</h3>
 		<ul>
 			<li>
@@ -48,6 +54,8 @@
 					services.</p>
 			</li>
 		</ul>
+	</div>
+	<div id="contact">
 		<h3>Some of the things I need to talk about are very personal - will discussions with my provider remain private and confidential?</h3>
 		<ul>
 			<li>
