--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,10 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 	<main>
-		<div id="contact">
+		<div class="title2">
 			<h2>Our Locations and When You Can Reach Out to Us</h2>
+		</div>
+		<div id="contact">
 			<table>
 				<tr>
 					<td>
@@ -44,9 +46,11 @@
 							</li>
 						</ul>
 					</td>
-					<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\ClarindaPing.PNG" alt="Clarinda"></td>
+					<td><img src="Images\ClarindaPing.PNG" alt="Clarinda"></td>
 				</tr>
 			</table>
+		</div>
+		<div id="contact">
 			<table>
 				<tr>
 					<td>
@@ -69,9 +73,11 @@
 							</li>
 						</ul>
 					</td>
-					<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\ShenandoahPing.PNG" alt="Shenandoah"></td>
+					<td><img src="Images\ShenandoahPing.PNG" alt="Shenandoah"></td>
 				</tr>
 			</table>
+		</div>
+		<div id="contact">
 			<table>
 				<tr>
 					<td>
@@ -94,9 +100,11 @@
 							</li>
 						</ul>
 					</td>
-					<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\RedOakPing.PNG" alt="RedOak"></td>
+					<td><img src="Images\RedOakPing.PNG" alt="RedOak"></td>
 				</tr>
 			</table>
+		</div>
+		<div id="contact">
 			<table>
 				<tr>
 					<td>
@@ -116,12 +124,13 @@
 					</td>
 				</tr>
 			</table>
+		</div>
 
-			<footer>
-				<hr>
-				<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
-				</p>
-			</footer>
+		<footer>
+			<hr>
+			<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
+			</p>
+		</footer>
 		</div>
 </body>
 
