--- a/providers.html
+++ b/providers.html
@@ -19,13 +19,16 @@
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
-
-	<div id="contact">
+	<div id="title1">
 		<h1>Get to Know Our Team!</h1>
+	</div>
+	<div class="title2">
 		<h2>Outpatient Therepy Providers:</h2>
+	</div>
+	<div id="contact">
 		<table>
 			<tr>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\Susan.jpg" alt="Susan" width="450"></td>
+				<td><img src="Images\Susan.jpg" alt="Susan" width="450"></td>
 				<td>
 					<h3>Susan Ecker, LISW</h3>
 					<ul>
@@ -45,9 +48,11 @@
 			</tr>
 			</td>
 		</table>
+	</div>
+	<div id="contact">
 		<table>
 			<tr>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\Amber.jpg" alt="Amber" width="450"></td>
+				<td><img src="Images\Amber.jpg" alt="Amber" width="450"></td>
 				<td>
 					<h3>Amber Butt, NCC, LMHC, CADC</h3>
 					<ul>
@@ -64,9 +69,11 @@
 				</td>
 			</tr>
 		</table>
+	</div>
+	<div id="contact">
 		<table>
 			<tr>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\Jason Swain.jpg" alt="Jason" width="450"></td>
+				<td><img src="Images\Jason Swain.jpg" alt="Jason" width="450"></td>
 				<td>
 					<h3>Jason Swain, TLMHC, NCC</h3>
 					<ul>
@@ -90,9 +97,11 @@
 				</td>
 			</tr>
 		</table>
+	</div>
+	<div id="contact">
 		<table>
 			<tr>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\kev2 (1).png" alt="Kevin" width="450"></td>
+				<td><img src="Images\kev2 (1).png" alt="Kevin" width="450"></td>
 				<td>
 					<h3>Kevin Robertson, LMHC</h3>
 					<ul>
@@ -110,9 +119,11 @@
 				</td>
 			</tr>
 		</table>
+	</div>
+	<div id="contact">
 		<table>
 			<tr>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\Caroline.jpg" alt="Caroline" width="450"></td>
+				<td><img src="Images\Caroline.jpg" alt="Caroline" width="450"></td>
 				<td>
 					<h3>Caroline Overmiller, LPC</h3>
 					<ul>
@@ -136,7 +147,9 @@
 				</td>
 			</tr>
 		</table>
-		<h2>Medication Management Providers:</h2>
+	</div>
+	<h2>Medication Management Providers:</h2>
+	<div id="contact">
 		<table>
 			<tr>
 				<td>
@@ -156,12 +169,13 @@
 						</li>
 					</ul>
 				</td>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\steph1.png" alt="Stephanie" width="450"></td>
+				<td><img src="Images\steph1.png" alt="Stephanie" width="450"></td>
 			</tr>
 		</table>
+	</div>
+	<div id="contact">
 		<table>
 			<tr>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\Denise Pic for Website.jpg" alt="Denise" width="450"></td>
 				<td>
 					<h3>Denise Crosson, PHD, FNP</h3>
 					<ul>
@@ -179,16 +193,21 @@
 						</li>
 					</ul>
 				</td>
+				<td><img src="Images\Denise Pic for Website.jpg" alt="Denise" width="450"></td>
 			</tr>
 		</table>
+	</div>
+	<div id="contact">
 		<table>
 			<tr>
 				<td>
 					<h3>Carla Abel-Zieg, ARNP</h3>
 				</td>
-				<td><img src="C:\Users\s540549\Documents\GitHub\client-project-group2morganburright\Images\Carla Abel-Zieg.jpg" alt="Carla" width="450"></td>
+				<td><img src="Images\Carla Abel-Zieg.jpg" alt="Carla" width="450"></td>
 			</tr>
 		</table>
+	</div>
+	<div id="contact">
 		<h2>The Rest of Our Team!</h2>
 		<p>In addition to our licensed medication management and outpatient therapy providers, WMHC is proud to employ a diverse staff representing multiple levels of education, experience, and licensure. Our team includes LPN's, RN's, Peer & Family
 			Peer
