--- a/extrahelp.html
+++ b/extrahelp.html
@@ -18,9 +18,38 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+<div id="contact">
+	<div class="services">
+		<h1>Extra Help
+	</div>
 
+	<section>
+	    <h4>What Is Mental Health?</h4>
+	    <p>Mental health is our emotional, psychological, and social well-being. It affects how we think, feel, and act. It also helps determine how we handle stress, relate to others, and make choices. Mental health is important at every stage of life, from childhood through adulthood <a href="https://www.mentalhealth.gov/basics/what-is-mental-health">(mentalhealth.gov)</a>.</p>
+	</section>
+	<section>
+	    <h4>Behavioural Disorders</h4>
+	    <p>Any persistent and repetitive pattern of behavior that violates societal norms or rules, seriously impairs a person's functioning, or creates distress in others. The term is used in a very general sense to cover a wide range of disorders or syndromes. Also called behavioral disorder <a href="https://dictionary.apa.org/behavior-disorder">(dictionary.apa.org)</a>.</p>
+	</section>
+	<section>
+			<h4>Mental Disorders</h4>
+			<p>Mental disorders comprise a broad range of problems, with different symptoms. They are generally characterized, however, by some combination of disturbed thoughts, emotions, behaviour and relationships with others. Examples are depression, anxiety, conduct disorders in children, bipolar disorders and schizophrenia. <a href="https://www.euro.who.int/en/health-topics/noncommunicable-diseases/mental-health/data-and-resources/key-terms-and-definitions-in-mental-health#mental">(euro.who.int)</a>.</p>
+	</section>
+	<section>
+			<h4>Psychosocial Disabilities</h4>
+			<p>People who have received a mental health diagnosis, and who have experienced negative social factors including stigma, discrimination and exclusion. People living with psychosocial disabilities include ex-users, current users of the mental health care services, as well as persons that identify themselves as survivors of these services or with the psychosocial disability itself. <a href="https://www.euro.who.int/en/health-topics/noncommunicable-diseases/mental-health/data-and-resources/key-terms-and-definitions-in-mental-health#mental">(euro.who.int)</a>.</p>
+	</section>
+	<section>
+			<h4>Pervasive Developmental Disorders</h4>
+			<p>Impaired social behaviour, communication and language, and a narrow range of interests and activities that are both unique to the individual and carried out repetitively. <a href="https://www.euro.who.int/en/health-topics/noncommunicable-diseases/mental-health/data-and-resources/key-terms-and-definitions-in-mental-health#mental">(euro.who.int)</a>.</p>
+	</section>
+	<section>
+			<h4>Obsessive-compulsive Disorder:</h4>
+			<p>Recurrent obsessional thoughts or compulsive acts. Obsessional thoughts are ideas, images, or impulses that enter the patient's mind again and again in a stereotyped form. <a href="https://www.euro.who.int/en/health-topics/noncommunicable-diseases/mental-health/data-and-resources/key-terms-and-definitions-in-mental-health#mental">(euro.who.int)</a>.</p>
+	</section>
 
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oxx564hMBUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 <footer>
     <hr>
     <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
