--- a/ot.html
+++ b/ot.html
@@ -18,6 +18,7 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+<div id="contact">
 	<div class="services">
 		<h1>Outpatient Therapy</h1>
 	</div>
@@ -38,7 +39,7 @@
 		 or from their homes via telehealth during standard business hours.</p>
 	<h3>Where can I get this service? </h3>
  	<p>Clarinda, Red Oak, Shenandoah, & at home via telehealth!</p>
-
+</div>
 <footer>
     <hr>
     <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
