--- a/services.html
+++ b/services.html
@@ -19,10 +19,9 @@
 	</div>
 	<div class="services">
 		<h1>Services</h1>
-	</div>
-
 
 		<table>
+			<tbody>
 			<tr>
 				<td>
 		  		<a href="ot.html"><img src="Images\image1.jpeg" alt="outpatienttherapy" class="image" style="width:100%">
@@ -44,7 +43,9 @@
 				<td>
 					<a href="pss.html"><img src="Images\image0 (12).jpeg" alt="peersupportservices" class="image" style="width:100%">
 				</td>
+			</tbody>
 		</table>
+	</div>
 
 <footer>
     <hr>
