--- a/comsupser.html
+++ b/comsupser.html
@@ -18,6 +18,7 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+<div id="contact">
 	<div class="services">
 		<h1>Community Support Services</h1>
 	</div>
@@ -37,7 +38,7 @@
 </p>
 	<h3>Where can I get this service? </h3>
  	<p>Page, Fremont, and Montgomery Counties</p>
-
+</div>
 <footer>
 		<hr>
     <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
