--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 					</li>
 					<li>
 						<h4>Phone Numbers:</h4>
-						<p>Ph. (712) 542-2388</p>
-						<p>F. (712) 542-2984</p>
+						<p>Ph. <a href="tel:7125422388">(712) 542-2388</a></p>
+						<p>F. <a href="tel:7125422984">(712) 542-2984</a></p>
 					</li>
 				</ul>
 			</div>
@@ -79,8 +79,8 @@
 					</li>
 					<li>
 						<h4>Phone Numbers:</h4>
-						<p>Ph. (712) 581-7900</p>
-						<p>F. (712) 522-1983</p>
+						<p>Ph. <a href="tel:7125817900">(712) 581-7900</a></p>
+						<p>F. <a href="tel:7125221983">(712) 522-1983</a></p>
 					</li>
 				</ul>
 			</div>
@@ -101,8 +101,8 @@
 					</li>
 					<li>
 						<h4>Phone Numbers:</h4>
-						<p>Ph. (712) 581-7900</p>
-						<p>F. (712) 522-1983</p>
+						<p>Ph. <a href="tel:7125817900">(712) 581-7900</a></p>
+						<p>F. <a href="tel:7125221983">(712) 522-1983</a></p>
 					</li>
 				</ul>
 			</div>
