--- a/mm.html
+++ b/mm.html
@@ -18,6 +18,7 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+<div id="contact">
 	<div class="services">
 		<h1>Medication Management</h1>
 	</div>
@@ -36,6 +37,7 @@
 	<p>This service is available to adults and children of all ages, from any community, that are capable of attending appointments onsite, or from their homes via telehealth during standard business hours. </p>
 	<h3>Where can I get this service? </h3>
 	<p>Clarinda, Red Oak, Shenandoah, Villisca (in collaboration with Villisca Medical Clinic), & at home via telehealth!</p>
+</div>
 
 <footer>
     <hr>
