--- a/scl.html
+++ b/scl.html
@@ -18,6 +18,7 @@
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
+<div id="contact">
 	<div class="services">
 		<h1>Supported Community Living</h1>
 	</div>
@@ -38,6 +39,7 @@
 	<h3>Where can I get this service? </h3>
 	<p>Page, Fremont, and Montgomery Counties
 </p>
+</div>
 
 <footer>
     <hr>
