--- a/FAQ.html
+++ b/FAQ.html
@@ -47,7 +47,7 @@
 		</ul>
 	</div>
 	<div id="contact">
-		<h3>I'm unisured or cannot afford my co-pay, am I still eligible for services?</h3>
+		<h3>I'm uninsured or cannot afford my co-pay, am I still eligible for services?</h3>
 		<ul>
 			<li>
 				<p>Yes you are! Waubonsie accepts private pay clients, with payment due at check in. WMHC also offers a sliding fee payment scale to individuals meeting certain income requirements, which may partially or completely cover the cost of your
