--- a/mm.html
+++ b/mm.html
@@ -29,7 +29,7 @@
 							prescriptions, and ongoing care/monitoring for individuals taking psychiatric medications.  </p>
 
 					<td><img src="Images\medmgt telehealth.jpg"
-					alt="insession"></td>
+					alt="video call"></td>
 			</tr>
 	</table>
 
