--- a/providers.html
+++ b/providers.html
@@ -23,7 +23,7 @@
 		<h1>Get to Know Our Team!</h1>
 	</div>
 	<div class="title2">
-		<h2>Outpatient Therepy Providers:</h2>
+		<h2>Outpatient Therapy Providers:</h2>
 	</div>
 	<div id="contact">
 		<table>
