--- a/pss.html
+++ b/pss.html
@@ -28,7 +28,7 @@
 				<p>Peer Support Services offer opportunities for learning and skill building in a peer-driven setting. Our Peer Support Services offer a dynamic mix of groups, activities, and community outings,
 					facilitated by a certified Peer Support Specialist with lived recovery experience.</p>
 
-			<td><img src="Images\hands.jpeg" alt="IHH" width="250"></td>
+			<td><img src="Images\hands.jpeg" alt="hands" width="250"></td>
 		</tr>
 	</table>
 	<h3>Who's eligible to receive this service? </h3>
