--- a/scl.html
+++ b/scl.html
@@ -29,7 +29,7 @@
  </p>
 
 					<td><img src="Images\Roxy Smith.jpg"
-					alt="insession"></td>
+					alt="roxy smith"></td>
 			</tr>
 	</table>
 
