--- a/services.html
+++ b/services.html
@@ -24,26 +24,26 @@
 			<tbody>
 			<tr>
 				<td>
-		  		<a href="ot.html"><img src="Images\image1.jpeg" alt="outpatienttherapy" class="image" style="width:100%">
+		  		<a href="ot.html"><img src="Images\image1.jpeg" alt="outpatient therapy" class="image" style="width:100%">
 				</td>
 				<td>
-					<a href="mm.html"><img src="Images\image2.jpeg" alt="medicationmanagement" class="image" style="width:100%">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<a href="comsupser.html"><img src="Images\image3.jpeg" alt="communitysupportservices" class="image" style="width:100%">
-				</td>
-				<td>
-					<a href="scl.html"><img src="Images\image4.jpeg" alt="supportedcommunityliving" class="image" style="width:100%">
+					<a href="mm.html"><img src="Images\image2.jpeg" alt="medication management" class="image" style="width:100%">
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<a href="ihh.html"><img src="Images\image5.jpeg" alt="integratedhealthhome" class="image" style="width:100%">
+					<a href="comsupser.html"><img src="Images\image3.jpeg" alt="community support services" class="image" style="width:100%">
 				</td>
 				<td>
-					<a href="pss.html"><img src="Images\image0 (12).jpeg" alt="peersupportservices" class="image" style="width:100%">
+					<a href="scl.html"><img src="Images\image4.jpeg" alt="supported community living" class="image" style="width:100%">
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a href="ihh.html"><img src="Images\image5.jpeg" alt="integrated health home" class="image" style="width:100%">
+				</td>
+				<td>
+					<a href="pss.html"><img src="Images\image0 (12).jpeg" alt="peer support services" class="image" style="width:100%">
 				</td>
 			</tr>
 			</tbody>
