--- a/ihh.html
+++ b/ihh.html
@@ -29,7 +29,7 @@
 					adults with a serious mental illness (SMI) and children with a serious emotional disturbance (SED). Our Care Coordinators help IHH members to meet individual goals related to their healthcare
 					needs- and will work with members' to provide information and resources required to assist members with healthy living.</p>
 
-			<td><img src="Images\WomanLeaning.jpeg" alt="IHH" width="250"></td>
+			<td><img src="Images\WomanLeaning.jpeg" alt="talking at desk" width="250"></td>
 		</tr>
 	</table>
 	<h3>Who's eligible to receive this service? </h3>
